Change Log for OpenXava project
===============================

- @ReadOnly and @EditOnly supported for @ElementCollection.
- Methods assertEditableInCollection and assertNoEditableInCollection of ModuleTestBase work for any type of collection.
- @OnChangeSearch supported for references in embeddable classes of element collections.
- @OnChange supported in embeddable classes of element collections. 
- @DefaultValueCalculator is executed each time that the properties in @PropertyValue(from) change.
- Fix: @DefaultValueCalculator with dependent properties is executed twice sometimes.
- New stereotype FILES for attaching several files to an entity.
- Fix: ModuleTestBase.logout() with the built-in security.
- @DefaultValueCalculator support in @ElementCollection. 
- FirstSteps content changed.
- New assertValidValuesCountInCollection() and assertValidValuesInCollection() methods in ModuleTestBase.
- Search action for references available in element collections.
- @SearchListCondition supported for references in embeddable classes of element collections.
- @SearchAction supported for references in embeddable classes of element collections.
- French messages improved.
- Support for @DescriptionsList references in element collections.
- Fix: ModuleTestBase.assertLabelInList() does not work with element collections.
- Fix: The xava:descriptionsList JSP tag only works from some folders. 
- Fix: Editor resizing in element collections only works for text input fields.
- Searching references by @SearchKey properties in element collections.
- Some new common use labels to be used in applications. 

OpenXava 5.0.1 (2014-7-14)
--------------------------
- Focus navigation improved for list filter fields.
- Date format in editors with date and time improved for Catalonian and French.
- Some new common use labels to be used in applications.
- Fix: Module as key in i18n labels file breaks the name and module description resolution for all modules. 