@@ -1,3 +1,3 @@
 product=OpenXava
-version=5.0.1
-date=2014-7-14
+version=5.1beta
+date=2014-9-xx
