@@ -1,5 +1,5 @@
 #HSQL Database Engine
-#Thu Sep 25 12:00:26 CEST 2014
+#Fri Sep 26 10:24:58 CEST 2014
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
